<resources>
    <string name="app_name">Word Learner</string>
    <string name="MyWord">My Words</string>
    <string name="ExitButton">Exit</string>
    <string name="coolness">How cool is this word?</string>
    <string name="ratingText">0,0</string>
    <string name="notes">Notes</string>
    <string name="noteField">Room for your cool notes</string>
    <string name="edit">Edit</string>
    <string name="nameOfAnimal" translatable="false" >Name</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="description">Description</string>
    <string name="descriptionText">Description Text</string>
    <string name="newWord">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string-array name="my_words">
        <item>Lion</item>
        <item>Leopard</item>
        <item>Cheetah</item>
        <item>Elephant</item>
        <item>Giraffe</item>
        <item>Kudu</item>
        <item>Gnu</item>
        <item>Oryx</item>
        <item>Camel</item>
        <item>Shark</item>
        <item>Crocodile </item>
        <item>Snake </item>
        <item>Buffalo </item>
        <item>Ostrich </item>
    </string-array>

    <string-array name="Pronunciation">
        <item>ˈlīən</item>
        <item>ˈlepərd</item>
        <item>ˈCHēdə</item>
        <item>ˈeləfənt</item>
        <item>jəˈraf</item>
        <item>ˈko͞odo͞o</item>
        <item>n(y)o͞o</item>
        <item>null</item>
        <item>ˈkaməl</item>
        <item>SHärk</item>
        <item>ˈkräkəˌdīl</item>
        <item>snāk</item>
        <item>ˈbəf(ə)ˌlō</item>
        <item>ˈästriCH</item>
    </string-array>

    <string-array name="Description">
        <item>a large tawny-coloured cat that lives in prides, found in Africa and NW India. The male has a flowing shaggy mane and takes little part in hunting, which is done cooperatively by the females.</item>
        <item>a large solitary cat that has a fawn or brown coat with black spots, native to the forests of Africa and southern Asia.</item>
        <item>a large slender spotted cat found in Africa and parts of Asia. It is the fastest animal on land.</item>
        <item>a very large plant-eating mammal with a prehensile trunk, long curved ivory tusks, and large ears, native to Africa and southern Asia. It is the largest living land animal.</item>
        <item>a large African mammal with a very long neck and forelegs, having a coat patterned with brown patches separated by lighter lines. It is the tallest living animal.</item>
        <item>an African antelope that has a greyish or brownish coat with white vertical stripes, and a short bushy tail. The male has long spirally curved horns.</item>
        <item>a large dark antelope with a long head, a beard and mane, and a sloping back.</item>
        <item>a large antelope living in arid regions of Africa and Arabia, having dark markings on the face and long horns.</item>
        <item>a large, long-necked ungulate mammal of arid country, with long slender legs, broad cushioned feet, and either one or two humps on the back. Camels can survive for long periods without food or drink, chiefly by using up the fat reserves in their humps.</item>
        <item>a long-bodied chiefly marine fish with a cartilaginous skeleton, a prominent dorsal fin, and tooth-like scales. Most sharks are predatory, though the largest kinds feed on plankton, and some can grow to a large size.</item>
        <item>a large predatory semiaquatic reptile with long jaws, long tail, short legs, and a horny textured skin.</item>
        <item>a long limbless reptile which has no eyelids, a short tail, and jaws that are capable of considerable extension. Some snakes have a venomous bite.</item>
        <item>a heavily built wild ox with backward-curving horns, found mainly in the Old World tropics:</item>
        <item>a flightless swift-running African bird with a long neck, long legs, and two toes on each foot. It is the largest living bird, with males reaching a height of up to 2.75 m.</item>
    </string-array>


</resources>
