<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DescriptionPage">

    <Button
        android:id="@+id/DeleteBtnDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/delete"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editBtnDescription"
        app:layout_constraintStart_toEndOf="@+id/cancelBtnDescription" />

    <ImageView
        android:id="@+id/PicOfAnimalDescriptionPage"
        android:layout_width="266dp"
        android:layout_height="244dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lion" />

    <TextView
        android:id="@+id/pronunciationTxtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pronunciation"
        android:textColor="@color/blueColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfAnimalTxtDescription" />

    <TextView
        android:id="@+id/noteFieldTxtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/noteField"
        android:textColor="@color/blueColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/notesTxtDescription"
        app:layout_constraintTop_toBottomOf="@+id/notesTxtDescription" />

    <TextView
        android:id="@+id/descriptionTitelTxtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textColor="@color/blueColor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pronunciationTxtDescription" />

    <TextView
        android:id="@+id/descriptionTxtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/descriptionText"
        android:textColor="@color/blueColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descriptionTitelTxtDescription"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTitelTxtDescription" />

    <TextView
        android:id="@+id/nameOfAnimalTxtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/nameOfAnimal"
        android:textColor="@color/blueColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PicOfAnimalDescriptionPage" />

    <TextView
        android:id="@+id/notesTxtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/notes"
        android:textColor="@color/blueColor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/descriptionTxtDescription"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTxtDescription" />

    <Button
        android:id="@+id/editBtnDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/edit"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelBtnDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundedbutton"
        android:text="@android:string/cancel"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/animalScoreTxtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratingText"
        android:textColor="@color/blueColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pronunciationTxtDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pronunciationTxtDescription"
        app:layout_constraintTop_toTopOf="@+id/pronunciationTxtDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>